<resources>
    <string name="app_name">FamiliesShareExtended</string>
    <string name="login_button">LOGIN</string>
    <string name="PasswordHint">Password</string>
    <string name="EmailHint">E-mail</string>
    <string name="SignUpLink"><u>SIGN UP</u></string>
    <string name="InfoSIgnUpLink">If you don\'t have an account, please sign up using:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="complete">COMPLETE</string>
    <string name="my_groups">My groups</string>
    <string name="textview">TextView</string>
    <string name="my_activities">My activities</string>
    <string name="group_id">Group ID</string>
    <string name="n_member">N_Member</string>
    <string name="info">Info</string>
    <string name="groupicon">GroupIcon</string>
    <string name="bell_icon">Bell_icon</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="hours">Hours</string>
    <string name="activity_name">Activity name</string>
    <string name="_3">3</string>
    <string name="clock_icon">clock icon</string>
    <string name="activity_icon">activity icon</string>
    <string name="children_icon">children icon</string>
    <string name="green_pass_notification_icon">green pass notification icon</string>
    <string name="adult_icon">adult icon</string>
    <string name="plus_icon">plus icon</string>
    <string name="would_you_like_to_insert_a_child">Would you like to insert a child?</string>
    <string name="gender">Gender</string>
    <string name="allergy_or_allergies">Allergy (or allergies)</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="homepage">HOMEPAGE</string>
    <string name="logout">LOGOUT</string>
    <string name="message_green_pass_icon">When the ! icon appears, it means that the activity requires the GREEN PASS certification\nIf an activity\'s background turns red, it means that a COVID case has been detected and you should get tested</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="create_a_group">Create a group</string>
    <string name="join_a_group">Join a group</string>
    <string name="guide">Guide</string>
    <string name="quit">Quit</string>
    <string name="logout_menu">Logout</string>
    <string name="info_menu">Info</string>
    <string name="members_menu">Members</string>
    <string name="activities_menu">Activities</string>
    <string name="cabinet_menu">Cabinet</string>
    <string name="market_menu">Market</string>
    <string name="title">Title</string>
    <string name="position_optional">Position (optional)</string>
    <string name="description_optional">Description (optional)</string>
    <string name="set_the_activity_position_optional">Set the activity position (optional)</string>
    <string name="select_the_activity_color_optional">Select the activity color (optional)</string>
    <string name="activity_color_optional">Activity color (optional)</string>
    <string name="your_picked_color_is">Your picked color is:</string>
    <string name="description">Description</string>
    <string name="description_text">description</string>
    <string name="visibility">Visibility</string>
    <string name="change_visibility">CHANGE VISIBILITY</string>
    <string name="visibility_text">visibility</string>
    <string name="button_for_creating_activity">Button for creating activity</string>
    <string name="work_in_progress_image">work in progress image</string>
    <string name="select_a_date_for_the_start_of_the_activity">Select a date for the start of the activity</string>
    <string name="select_a_time_for_the_start_of_the_activity">Select a time for the start of the activity</string>
    <string name="select_a_date_for_the_end_of_the_activity">Select a date for the end of the activity</string>
    <string name="select_a_time_for_the_end_of_the_activity">Select a time for the end of the activity</string>
    <string name="member_icon">member icon</string>
    <string name="member_name">Member Name</string>
    <string name="role_member">Role Member</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">profile email</string>
    <string name="search_profile">Search the profiles by email:</string>
    <string name="gg_mm_aaaa">gg/mm/aaaa</string>
    <string name="download">DOWNLOAD</string>
    <string name="description_icon">description icon</string>
    <string name="insert_file">INSERT FILE</string>
    <string name="title_activity_info_user">InfoUserActivity</string>
    <string name="user_circle_icon">user_circle_icon</string>
    <string name="string_user_circle_icon">user_circle_icon</string>
    <string name="user_personal_info">Personal info</string>
    <string name="user_greenpass">Greenpass</string>
    <string name="user_positivity">Positivity</string>
    <string name="user_positive">I tested positive for Covid</string>
    <string name="user_change_greenpass">Change greenpass state:</string>
    <string name="user_greenpass_state">Not available</string>
    <string name="user_children">Children</string>
    <string name="children_name">Children name</string>
    <string name="children_birthdate">Children birthdate</string>
    <string name="group_name">Group name</string>
    <string name="location">Location</string>
    <string name="activity_info_name">Activity Info Name</string>
    <string name="activity_info_group_name">Activity Info Group Name</string>
    <string name="activity_info_description">Activity Info Description</string>
    <string name="activity_info_location">Activity Info Location</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="would_you_like_to_participate">Would you like to participate?</string>
    <string name="will_your_child_participate">Will your child participate?</string>
    <string name="to_str">to</string>
    <string name="day_month_sep">/</string>
    <string name="edit">Edit</string>
    <string name="insert_the_new_value">Insert the new value</string>
    <string name="splash_screen">Splash screen</string>
    <string name="trash_bin_icon">trash bin icon</string>
    <string name="my_child_tested_positive_for_covid">My child tested positive for covid</string>
    <string name="is_the_green_pass_certification_required">Is the GREEN PASS certification required?</string>
</resources>