<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="114dp">

    <TextView
        android:id="@+id/day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/day"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="13dp"
        android:text="@string/hours"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="45dp"
        android:text="@string/activity_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/n_adult_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="77dp"
        android:text="@string/_3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/n_children_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="242dp"
        android:layout_marginTop="77dp"
        android:text="@string/_3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/month_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="64dp"
        android:text="@string/month"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/clock_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/clock_icon"
        app:srcCompat="@drawable/ms_animated_vector_circle_to_warning_24dp" />

    <ImageView
        android:id="@+id/green_pass_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="329dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/green_pass_notification_icon"
        app:srcCompat="@drawable/ms_animated_vector_circle_to_warning_24dp" />

    <ImageView
        android:id="@+id/plus_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="370dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/plus_icon"
        app:srcCompat="@drawable/ms_animated_vector_circle_to_warning_24dp" />

    <ImageView
        android:id="@+id/children_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="195dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/children_icon"
        app:srcCompat="@drawable/ms_animated_vector_circle_to_warning_24dp" />

    <ImageView
        android:id="@+id/activity_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/activity_icon"
        app:srcCompat="@drawable/ms_animated_vector_circle_to_warning_24dp" />

    <ImageView
        android:id="@+id/adult_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="77dp"
        android:contentDescription="@string/adult_icon"
        app:srcCompat="@drawable/ms_animated_vector_circle_to_warning_24dp" />
</RelativeLayout>