<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <ImageView
        android:id="@+id/file_icon"
        android:layout_width="73dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/groupicon"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/file_icon" />

    <TextView
        android:id="@+id/member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="12dp"
        android:text="@string/member_name"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="235dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="42dp"
        android:text="@string/description"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="284dp"
        android:layout_marginTop="11dp"
        android:text="@string/gg_mm_aaaa"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/member_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/member_icon"
        app:srcCompat="@drawable/user_icon" />

    <ImageView
        android:id="@+id/trash_bin_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="373dp"
        android:layout_marginTop="63dp"
        android:contentDescription="@string/member_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/trash_bin_icon" />

    <ImageView
        android:id="@+id/description_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/description_icon"
        app:srcCompat="@drawable/description_icon" />

    <Button
        android:id="@+id/download_button"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="92dp"
        android:text="@string/download"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>