<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/group_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/groupicon"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/group_icon" />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="15dp"
        android:text="@string/group_id"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/n_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="60dp"
        android:text="@string/n_member"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/group_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="90dp"
        android:text="@string/info"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/bell_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="359dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/bell_icon"
        app:srcCompat="@drawable/bell_icon"
        tools:ignore="ImageContrastCheck" />
</RelativeLayout>